--- a/project-1/index.css
+++ b/project-1/index.css
@@ -1,15 +1,14 @@
 
 
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300&family=Poppins:wght@200;400&display=swap'); 
+
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-body{
-    font-family: 'Poppins', sans-serif;
-}
+
 
  nav{
     display: flex;
@@ -30,16 +29,6 @@ body{
   text-decoration: none;
 }
 
-
-nav>more-travels:hover{
-  color: blue;
-  background-color:#B0BEC5 ;
-}
-/* nav h3{
-    color: whitesmoke;
-    padding-left: 20px;
-    font-weight: 500;
-} */
 nav ul{
     display: flex;
     list-style: none;
@@ -82,11 +71,14 @@ nav ul li a:hover{
 }
 
 #travel ul{
-    display: flex;
+    display:flex;
     /* justify-content: space-between; */
     align-items: center;
     padding:  40px;
     list-style: none;
+    margin: auto;
+    /* border: 1px solid; */
+    justify-content: space-between;
 
 }
 #travel ul li{
@@ -225,6 +217,7 @@ nav ul li a:hover{
   #middle p{
     font-size: 12px;
     text-align: justify;
+    padding-top: 10px;
     padding-left: 10px;
     padding-right: 10px;
     /* font-weight: 200; */
@@ -414,14 +407,204 @@ nav ul li a:hover{
   /* font-size: 20px; */
   /* line-height: 10px; */
  }
- .heading1{
-  margin-left: 140px;
-  /* background-color: #0D47A1; */
- }
+ 
  .heading{
  
-  margin-left:130px;
-  width: 30%;
-  
-  /* background-color: #0D47A1; */
+  width: 80%;
+  height: auto;
+  margin: auto;
+
  }
+ .heading h2{
+  text-align: left;
+  margin: 0;
+ }
+
+
+
+ .video{
+  width: 80%;
+  height: 500px;
+  background:  rgba(165, 163, 163, 0.7)url("images/sagar1.jpg") no-repeat center center/cover;
+  background-blend-mode:color-burn;
+  margin: auto;
+  margin-bottom: 100px;
+  border-radius: 10px;
+
+ }
+.bottom{
+  width: 80%;
+  height: auto;
+  margin: auto;
+}
+
+
+ .bottom h2{
+   margin-bottom: 20px;
+    text-align: left;
+ }
+ .mybottom{
+  /* padding-top: 200px; */
+ display: grid;
+ grid-template-columns: repeat(3,1fr);
+ margin: auto;
+ width: 100%;
+ gap: 20px;
+ /* border: 1px solid red; */
+ }
+ .mybottom div{
+  /* border: 1px solid black; */
+  padding: 15px 10px 25px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+ }
+
+ .mybottom p{
+  font-size: 13px;
+ }
+
+
+
+ .travelocity{
+  display: grid;
+  grid-template-columns: repeat(3,38%);
+  width: 80%;
+  height: 300px;
+  /* margin-right:20px; */
+  margin: auto;
+  margin-top: 30px;
+  border: 0.5px solid black;
+  border-radius: 10px;
+ }
+
+ .travelocity div{
+  /* border: 1px solid red; */
+  margin-right: 25px;
+  /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
+ }
+ 
+ .travelocity div img{
+  width: 100%;
+  height: 100%;
+ }
+
+ .travelocity li{
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 28px;
+ }
+ .setimg{
+  display: block;
+  width: 200px;
+  height: 150px;
+  margin-top: 30px;
+  margin-left: 80px;
+  padding-left: 50px;
+  text-align: center;
+ }
+ .setimg img{
+  width: 100%;
+  height: 100%;
+ }
+
+ .test{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  width: 100%;
+  margin: auto;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  /* border: 1px solid red; */
+ }
+ #country-code{
+  width: 160px;
+  height: 45px;
+  padding: 10px;
+  /* margin-bottom: 10px; */
+  border-radius: 5px;
+  /* height: 200px; */
+ }
+
+ #input{
+  width: 160px;
+  height: 45px;
+  padding: 10px;
+  border-radius: 5px;
+ }
+
+ #btn1{
+  width: 160px;
+  height: 45px;
+  padding: 10px;
+  background-color: #3F51B5;
+  color: whitesmoke;
+  font-size: 16px;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+ }
+
+ .travelocity{
+  font-size: 13px;
+  font-family: 300;
+ }
+
+ .destination{
+  width: 80%;
+  margin: auto;
+  
+ }
+ #head{
+  width: 80%;
+  margin: auto;
+  /* border: 1px solid red; */
+  margin-top: 30px;
+  margin-bottom: 20px;
+ }
+ #head h3{
+  text-align: left;
+ }
+
+ .footer1{
+  width: 80%;
+  display: grid;
+   grid-template-columns: repeat(4,1fr);
+   margin: auto;
+   gap: 15px;
+   margin-bottom: 100px;
+ }
+ .col-1 a{
+  display: block;
+  text-decoration: none;
+  font-size: 14px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  line-height: 28px;
+ }
+ .col-2 a{
+  display: block;
+  text-decoration: none;
+  font-size: 14px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  line-height: 28px;
+ }
+ .col-3 a{
+  display: block;
+  text-decoration: none;
+  font-size: 14px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  line-height: 28px;
+ }
+ .col-4 a{
+  display: block;
+  text-decoration: none;
+  font-size: 14px;
+  line-height: 28px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ }
+
+ .footer hr{
+  width: 100%;
+ }
+
+ 
+ 
